Оформил секцию Преимущества

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 
     <header class="page-header">
       <div class="page-header__wrap">
-        <a href="#" class="page-header__logo logo-mobile"><img src="img/logotype-white-mobile.png" alt="Логотип Pink" class="page-header_logo-img logo-img" width="75px" height="25px"></a>
+        <a href="#" class="page-header__logo logo-mobile"><img src="img/logotype-white-mobile.png" alt="Логотип Pink" class="page-header_logo-img logo-img" width="75" height="25"></a>
         <button type="button" class="page-header__button"><span class="visually-hidden">Открыть меню</span></button>
       </div>
       <nav class="main-nav">
         <div class="main-nav__wrap">
-          <a href="#" class="page-header__logo logo-mobile"><img src="img/logotype-white-mobile.png" alt="Логотип Pink" class="page-header_logo-img logo-img" width="75px" height="25px"></a>
+          <a href="#" class="page-header__logo logo-mobile"><img src="img/logotype-white-mobile.png" alt="Логотип Pink" class="page-header_logo-img logo-img" width="75" height="25"></a>
           <button type="button" class="button__close"><span class="visually-hidden">Закрыть меню</span></button>
         </div>
         <ul class="main-nav__list">
@@ -32,7 +32,7 @@
 
       <section class="download-attachment">
         <h2 class="visually-hidden">Скачать приложение</h2>
-        <img src="img/smart.jpg" width="320px" height="490px" alt="Смартфон" class="download-attachment__img">
+        <img src="img/smart.jpg" width="320" height="490" alt="Смартфон" class="download-attachment__img">
         <div class="download-attachment__wrap">
           <a href="#" class="download-attachment__button button">Скачать приложение</a>
           <div class="available-systems download-attachment__available-systems">
@@ -50,7 +50,7 @@
         <h2 class="visually-hidden">Наши преимущества</h2>
         <p class="advantages__text">Устали от серости мегаполиса?</p>
         <p class="advantages__text">Нам есть что вам предложить!</p>
-        <ul class="advantages__list"
+        <ul class="advantages__list">
           <li class="advantages__item">
             <b>Поднимает настроение</b>
             Приложение позволит вам победить осеннюю хандру и депрессию буквально в несколько кликов!
@@ -64,7 +64,7 @@
             Ставьте лайки, комментируйте, делитесь фотографиями с друзьями и заводите новых.
           </li>
         </ul>
-        <img src="" alt="Всем привет" class="advantages__img">
+        <img src="img/iphone.jpg" width="157" height="320" alt="Всем привет" class="advantages__img">
       </section>
 
       <article class="reviews">
