Оформил раздел с отзывами

--- a/index.html
+++ b/index.html
@@ -77,10 +77,10 @@
             </blockquote>
           </li>
         </ul>
-        <ul class="slider__control">
-          <li class="slider__item"><button type="button" class="slider__toggle slider__toggle--active"></button></li>
-          <li class="slider__item"><button type="button" class="slider__toggle"></button></li>
-          <li class="slider__item"><button type="button" class="slider__toggle"></button></li>
+        <ul class="reviews__control slider__control">
+          <li class="slider__control__item"><button type="button" class="slider__toggle slider__toggle--active"></button></li>
+          <li class="slider__control__item"><button type="button" class="slider__toggle"></button></li>
+          <li class="slider__control__item"><button type="button" class="slider__toggle"></button></li>
         </ul>
       </article>
 
@@ -106,9 +106,9 @@
           </li>
         </ul>
         <ul class="slider__control">
-          <li class="slider__item"><button type="button" class="slider__toggle slider__toggle--active"></button></li>
-          <li class="slider__item"><button type="button" class="slider__toggle"></button></li>
-          <li class="slider__item"><button type="button" class="slider__toggle"></button></li>
+          <li class="slider__control__item"><button type="button" class="slider__toggle slider__toggle--active"></button></li>
+          <li class="slider__control__item"><button type="button" class="slider__toggle"></button></li>
+          <li class="slider__control__item"><button type="button" class="slider__toggle"></button></li>
         </ul>
       </section>
 
