--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 
       <section class="contacts">
         <p class="contacts__text">Остались вопросы? Свяжитесь с нами!</p>
-        <div class="contacts_wrap">
+        <div class="contacts__wrap">
           <p class="contacts__item">
             <b>Звоните:</b>
             +7(812)555-66-66
@@ -162,7 +162,10 @@
              ул. Большая Конюшенная, 19/8
           </p>
         </div>
-        <img src="" alt="ул. Большая Конюшенная, 19/8">
+        <img src="img/map.jpg" class="contacts__map" alt="ул. Большая Конюшенная, 19/8">
+        <div class="contacts__marker">
+
+        </div>
       </section>
 
     </main>
