--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <header class="page-header">
       <div class="page-header__wrap">
-        <a href="#" class="page-header__logo logo-mobile"><img src="img/pink-logo.svg" alt="Логотип Pink" class="page-header_logo-img logo-img" width="75" height="25"></a>
+        <a href="#" class="page-header__logo"><img src="img/pink-logo.svg" alt="Логотип Pink" class="page-header__img" width="75" height="25"></a>
         <button type="button" class="page-header__button"><span class="visually-hidden">Открыть меню</span></button>
       </div>
       <nav class="main-nav">
@@ -171,15 +171,15 @@
     </main>
 
     <footer class="page-footer">
-      <img src="" alt="Логотип Pink" class="page-footer__logo logo">
+      <a href="#" class="page-footer__logo"><img src="img/pink-logo2.svg" alt="Логотип Pink" class="page-footer__img"></a>
       <ul class="page-footer__list social__list">
-        <li class="social__item"><a href="#" class="social__link">Twitter</a></li>
-        <li class="social__item"><a href="#" class="social__link">Facebook</a></li>
-        <li class="social__item"><a href="#" class="social__link">Youtube</a></li>
+        <li class="social__item"><a href="#" class="social__link"><span class="visually-hidden">Twitter</span></a></li>
+        <li class="social__item"><a href="#" class="social__link"><span class="visually-hidden">Facebook</span></a></li>
+        <li class="social__item"><a href="#" class="social__link"><span class="visually-hidden">Youtube</span></a></li>
       </ul>
       <p class="page-footer__developed developed">
         Разработано
-        <a href="https://htmlacademy.ru/">htmlacademy.ru</a>
+        <a href="https://htmlacademy.ru/" class="developed__link"><span class="visually-hidden">htmlacademy.ru</span></a>
       </p>
     </footer>
 
