--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Pink Главная страница</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700&display=swap&subset=cyrillic" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
+
   </head>
   <body>
 
@@ -15,7 +16,7 @@
       </div>
       <nav class="main-nav">
         <div class="main-nav__wrap">
-          <a href="#" class="page-header__logo logo-mobile"><img src="img/img/pink-logo.svg" alt="Логотип Pink" class="page-header_logo-img logo-img" width="75" height="25"></a>
+          <a href="#" class="page-header__logo logo-mobile"><img src="img/pink-logo.svg" alt="Логотип Pink" class="page-header_logo-img logo-img" width="75" height="25"></a>
           <button type="button" class="button__close"><span class="visually-hidden">Закрыть меню</span></button>
         </div>
         <ul class="main-nav__list">
@@ -77,11 +78,11 @@
             </blockquote>
           </li>
         </ul>
-        <ul class="reviews__control slider__control">
-          <li class="slider__control__item"><button type="button" class="slider__toggle slider__toggle--active"></button></li>
-          <li class="slider__control__item"><button type="button" class="slider__toggle"></button></li>
-          <li class="slider__control__item"><button type="button" class="slider__toggle"></button></li>
-        </ul>
+          <ul class="reviews__control slider__control">
+            <li class="slider__control__item"><button type="button" class="slider__toggle slider__toggle--active"></button></li>
+            <li class="slider__control__item"><button type="button" class="slider__toggle"></button></li>
+            <li class="slider__control__item"><button type="button" class="slider__toggle"></button></li>
+          </ul>
       </article>
 
       <section class="price">
