Изменил размеры под резину

--- a/index.html
+++ b/index.html
@@ -140,11 +140,13 @@
             </table>
           </li>
         </ul>
-        <ul class="price__control slider__control">
+        <div class="price__control__wrap">
+          <ul class="price__control slider__control">
           <li class="slider__control__item"><button type="button" class="slider__toggle slider__toggle--active"></button></li>
           <li class="slider__control__item"><button type="button" class="slider__toggle"></button></li>
           <li class="slider__control__item"><button type="button" class="slider__toggle"></button></li>
         </ul>
+        </div>
       </section>
 
       <section class="contacts">
