Вернул фиксированные размеры в px

--- a/index.html
+++ b/index.html
@@ -33,8 +33,13 @@
 
       <section class="download-attachment">
         <h2 class="visually-hidden">Скачать приложение</h2>
-        <img src="img/smart.jpg" width="320" height="490" alt="Смартфон" class="download-attachment__img">
-        <div class="download-attachment__wrap">
+        <div class="download-attachment__wrap1">
+          <p class="img__text">Взгляните на жизнь иначе!</p>
+          <img src="img/smart-mobile.jpg" width="320" height="490" alt="Смартфон" class="download-attachment__img img__mobile">
+          <img src="img/smart-tablet.jpg" width="660" height="720" alt="Смартфон" class="download-attachment__img img__tablet">
+          <img src="img/smart.jpg" width="1200" height="850" alt="Смартфон" class="download-attachment__img img__desctop">
+        </div>
+        <div class="download-attachment__wrap2">
           <a href="#" class="download-attachment__button button">Скачать приложение</a>
           <div class="available-systems download-attachment__available-systems">
             <ul class="available-systems__list">
