Адаптация под tablet

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       </div>
       <nav class="main-nav">
         <div class="main-nav__wrap">
-          <a href="#" class="page-header__logo logo-mobile"><img src="img/pink-logo.svg" alt="Логотип Pink" class="page-header_logo-img logo-img" width="75" height="25"></a>
+          <a href="#" class="page-header__logo logo-mobile"><img src="img/pink-logo.svg" alt="Логотип Pink" class="page-header__img" width="75" height="25"></a>
           <button type="button" class="button__close"><span class="visually-hidden">Закрыть меню</span></button>
         </div>
         <ul class="main-nav__list">
@@ -53,10 +53,11 @@
       </section>
 
       <section class="advantages">
-        <h2 class="visually-hidden">Наши преимущества</h2>
-        <p class="advantages__text">Устали от серости мегаполиса?</p>
-        <p class="advantages__text">Нам есть что вам предложить!</p>
-        <ul class="advantages__list">
+        <div class="advantages__wrap">
+          <h2 class="visually-hidden">Наши преимущества</h2>
+          <p class="advantages__text advantages__text--1">Устали от серости мегаполиса?</p>
+          <p class="advantages__text advantages__text--2">Нам есть что вам предложить!</p>
+          <ul class="advantages__list">
           <li class="advantages__item">
             <b>Поднимает настроение</b>
             Приложение позволит вам победить осеннюю хандру и депрессию буквально в несколько кликов!
@@ -70,7 +71,18 @@
             Ставьте лайки, комментируйте, делитесь фотографиями с друзьями и заводите новых.
           </li>
         </ul>
-        <img src="img/iphone.jpg" width="157" height="320" alt="Всем привет" class="advantages__img">
+          <img src="img/iphone.jpg" width="157" height="320" alt="Всем привет" class="advantages__img">
+        </div>
+      </section>
+
+      <section class="effect">
+        <h2 class="visually-hidden">Эффект от приложения</h2>
+        <img class="effect__img" src="img/effect.png" width="238" height="276" alt="24 часа">
+        <p class="effect__text">
+          <b>Эффект на 24 часа!</b>
+          Британские ученые провели исследования и доказали, что положительный эффект от использования приложения длится целые сутки!
+          <a class="effect__link" href="#">Узнать больше об исследовании</a>
+        </p>
       </section>
 
       <article class="reviews">
@@ -78,12 +90,13 @@
         <ul class="reviews__list slider">
           <li class="reviews__item slider__item">
             <b class="author">Николай Петров</b>
+            <span class="author--desc">25лет, водитель трамвая</span>
             <blockquote class="reviews__text slider__text">
               &laquo; Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А ещё я познакомился со своей будущей женой в комментариях к выложенной фотографии! &raquo;
             </blockquote>
           </li>
         </ul>
-          <ul class="reviews__control slider__control">
+        <ul class="reviews__control slider__control">
             <li class="slider__control__item"><button type="button" class="slider__toggle slider__toggle--active"></button></li>
             <li class="slider__control__item"><button type="button" class="slider__toggle"></button></li>
             <li class="slider__control__item"><button type="button" class="slider__toggle"></button></li>
@@ -93,6 +106,19 @@
       <section class="price">
         <h2 class="visually-hidden">Наш прайс-лист</h2>
         <ul class="price__list slider">
+          <li class="price__item price__item--tablet">
+            <table class="price__table table">
+              <tr>
+                <td class="table__name">Розовый фильтр</td>
+              </tr>
+              <tr>
+                <td class="table__name">Смайлики</td>
+              </tr>
+              <tr>
+                <td class="table__name">Комментарии</td>
+              </tr>
+            </table>
+          </li>
           <li class="price__item slider__item">
             <p class="price__package">База <span>1,99 USD</span> </p>
             <table class="price__table table">
@@ -111,7 +137,7 @@
             </table>
           </li>
           <li class="price__item slider__item">
-            <p class="price__package">Стандарт <span>3,99 USD</span> </p>
+            <p class="price__package hit">Стандарт <span>3,99 USD</span> </p>
             <table class="price__table table">
               <tr>
                 <td class="table__name">Розовый фильтр</td>
@@ -170,9 +196,10 @@
              ул. Большая Конюшенная, 19/8
           </p>
         </div>
-        <img src="img/map.jpg" class="contacts__map" alt="ул. Большая Конюшенная, 19/8">
-        <div class="contacts__marker">
-
+        <div class="map__wrap">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d999.3826560777956!2d30.322022973120255!3d59.936036370949985!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sru!2sua!4v1562932182368!5m2!1sru!2sua" width="320" height="200" frameborder="0" style="border:0" allowfullscreen></iframe>
+          <img src="img/map.jpg" class="contacts__map" alt="ул. Большая Конюшенная, 19/8">
+          <div class="contacts__marker"></div>
         </div>
       </section>
 
