Закончил адаптацию для tablet

--- a/index.html
+++ b/index.html
@@ -196,11 +196,10 @@
              ул. Большая Конюшенная, 19/8
           </p>
         </div>
-        <div class="map__wrap">
-          <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d999.3826560777956!2d30.322022973120255!3d59.936036370949985!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sru!2sua!4v1562932182368!5m2!1sru!2sua" width="320" height="200" frameborder="0" style="border:0" allowfullscreen></iframe>
-          <img src="img/map.jpg" class="contacts__map" alt="ул. Большая Конюшенная, 19/8">
-          <div class="contacts__marker"></div>
-        </div>
+        <img src="img/map-mobile.jpg" class="contacts__map--mobile" alt="ул. Большая Конюшенная, 19/8">
+        <img src="img/map-tablet.jpg" class="contacts__map--tablet" alt="ул. Большая Конюшенная, 19/8">
+        <img src="img/map-desctop.jpg" class="contacts__map--desktop" alt="ул. Большая Конюшенная, 19/8">
+        <div class="contacts__marker"></div>
       </section>
 
     </main>
