Закончил адаптацию под Desktop

--- a/index.html
+++ b/index.html
@@ -76,13 +76,15 @@
       </section>
 
       <section class="effect">
-        <h2 class="visually-hidden">Эффект от приложения</h2>
-        <img class="effect__img" src="img/effect.png" width="238" height="276" alt="24 часа">
-        <p class="effect__text">
+        <div class="effect__wrap">
+          <h2 class="visually-hidden">Эффект от приложения</h2>
+          <img class="effect__img" src="img/effect.png" width="238" height="276" alt="24 часа">
+          <p class="effect__text">
           <b>Эффект на 24 часа!</b>
           Британские ученые провели исследования и доказали, что положительный эффект от использования приложения длится целые сутки!
           <a class="effect__link" href="#">Узнать больше об исследовании</a>
-        </p>
+          </p>
+        </div>
       </section>
 
       <article class="reviews">
@@ -100,6 +102,8 @@
             <li class="slider__control__item"><button type="button" class="slider__toggle slider__toggle--active"></button></li>
             <li class="slider__control__item"><button type="button" class="slider__toggle"></button></li>
             <li class="slider__control__item"><button type="button" class="slider__toggle"></button></li>
+            <li> <button type="button" class="slider__button slider__button--next"></button> </li>
+            <li> <button type="button" class="slider__button slider__button--previous"></button> </li>
           </ul>
       </article>
 
