--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <img src="img/smart.jpg" width="1200" height="850" alt="Смартфон" class="download-attachment__img img__desctop">
         </div>
         <div class="download-attachment__wrap2">
-          <a href="#" class="download-attachment__button button">Скачать приложение</a>
+          <a href="#" class="download-attachment__button button"><span>Скачать приложение</span></a>
           <div class="available-systems download-attachment__available-systems">
             <ul class="available-systems__list">
               <li class="available-systems__item"><span class="visually-hidden">iOS</span></li>
@@ -102,8 +102,8 @@
             <li class="slider__control__item"><button type="button" class="slider__toggle slider__toggle--active"></button></li>
             <li class="slider__control__item"><button type="button" class="slider__toggle"></button></li>
             <li class="slider__control__item"><button type="button" class="slider__toggle"></button></li>
-            <li> <button type="button" class="slider__button slider__button--next"></button> </li>
-            <li> <button type="button" class="slider__button slider__button--previous"></button> </li>
+            <li> <button type="button" class="slider__button slider__button--next"> <span class="visually-hidden">Следующий отзыв</span> </button> </li>
+            <li> <button type="button" class="slider__button slider__button--previous"> <span class="visually-hidden">Предыдущий отзыв</span> </button> </li>
           </ul>
       </article>
 
@@ -211,9 +211,9 @@
     <footer class="page-footer">
       <a href="#" class="page-footer__logo"><img src="img/pink-logo2.svg" alt="Логотип Pink" class="page-footer__img"></a>
       <ul class="page-footer__list social__list">
-        <li class="social__item"><a href="#" class="social__link"><span class="visually-hidden">Twitter</span></a></li>
-        <li class="social__item"><a href="#" class="social__link"><span class="visually-hidden">Facebook</span></a></li>
-        <li class="social__item"><a href="#" class="social__link"><span class="visually-hidden">Youtube</span></a></li>
+        <li class="social__item"><a href="#" class="social__link social__link--tw"><span class="visually-hidden">Twitter</span></a></li>
+        <li class="social__item"><a href="#" class="social__link social__link--fb"><span class="visually-hidden">Facebook</span></a></li>
+        <li class="social__item"><a href="#" class="social__link  social__link--yt"><span class="visually-hidden">Youtube</span></a></li>
       </ul>
       <p class="page-footer__developed developed">
         Разработано
