--- a/photo.html
+++ b/photo.html
@@ -8,13 +8,18 @@
   <body>
 
     <header class="page-header">
-      <a href="index.html" class="page-header__logo logo-mobile"><img src="" alt="Логотип Pink" class="page-header_logo-img" logo-img></a>
-      <nav class="main-mav">
-        <button type="button" class="main-nav__toggle">Открыть меню</button>
-        <button type="button" class="main-nav__close">Закрыть меню</button>
+      <div class="page-header__wrap">
+        <a href="index.html" class="page-header__logo"><img src="img/pink-logo.svg" alt="Логотип Pink" class="page-header__img" width="75" height="25"></a>
+        <button type="button" class="page-header__button"><span class="visually-hidden">Открыть меню</span></button>
+      </div>
+      <nav class="main-nav">
+        <div class="main-nav__wrap">
+          <a href="index.html" class="page-header__logo logo-mobile"><img src="img/pink-logo.svg" alt="Логотип Pink" class="page-header__img" width="75" height="25"></a>
+          <button type="button" class="button__close"><span class="visually-hidden">Закрыть меню</span></button>
+        </div>
         <ul class="main-nav__list">
-          <li class="main-nav__item"><<a href="index.html">Главная</a></li>
-          <li class="main-nav__item"><span class="main-nav__link">Фотографии</span></li>
+          <li class="main-nav__item"><a href="index.html" class="main-nav__link">Главная</a></li>
+          <li class="main-nav__item"><span class="main-nav__link">Фотографии</span</li>
           <li class="main-nav__item"><a href="form.html" class="main-nav__link">Конкурс</a></li>
           <li class="main-nav__item"><a href="https://htmlacademy.ru/" class="main-nav__link">Html Academy</a></li>
         </ul>
@@ -124,15 +129,15 @@
     </main>
 
     <footer class="page-footer">
-      <img src="" alt="Логотип Pink" class="page-footer__logo logo">
+      <a href="#" class="page-footer__logo"><img src="img/pink-logo2.svg" alt="Логотип Pink" class="page-footer__img"></a>
       <ul class="page-footer__list social__list">
-        <li class="social__item"><a href="#" class="social__link">Twitter</a></li>
-        <li class="social__item"><a href="#" class="social__link">Facebook</a></li>
-        <li class="social__item"><a href="#" class="social__link">Youtube</a></li>
+        <li class="social__item"><a href="#" class="social__link"><span class="visually-hidden">Twitter</span></a></li>
+        <li class="social__item"><a href="#" class="social__link"><span class="visually-hidden">Facebook</span></a></li>
+        <li class="social__item"><a href="#" class="social__link"><span class="visually-hidden">Youtube</span></a></li>
       </ul>
       <p class="page-footer__developed developed">
         Разработано
-        <a href="https://htmlacademy.ru/">htmlacademy.ru</a>
+        <a href="https://htmlacademy.ru/" class="developed__link"><span class="visually-hidden">htmlacademy.ru</span></a>
       </p>
     </footer>
 
