Написал и подключил скрипт к index.html

--- a/index.html
+++ b/index.html
@@ -177,9 +177,9 @@
         </ul>
         <div class="price__control__wrap">
           <ul class="price__control slider__control">
-          <li class="slider__control__item"><button type="button" class="slider__toggle slider__toggle--active"></button></li>
-          <li class="slider__control__item"><button type="button" class="slider__toggle"></button></li>
-          <li class="slider__control__item"><button type="button" class="slider__toggle"></button></li>
+          <li class="slider__control__item"><button type="button" class="slider__toggle slider__toggle--1 slider__toggle--active"></button></li>
+          <li class="slider__control__item"><button type="button" class="slider__toggle slider__toggle--2"></button></li>
+          <li class="slider__control__item"><button type="button" class="slider__toggle slider__toggle--3"></button></li>
         </ul>
         </div>
       </section>
@@ -220,6 +220,10 @@
         <a href="https://htmlacademy.ru/" class="developed__link"><span class="visually-hidden">htmlacademy.ru</span></a>
       </p>
     </footer>
+
+    <script src="js/index.js">
+
+    </script>
 
   </body>
 </html>
