--- a/index.html
+++ b/index.html
@@ -11,26 +11,9 @@
     <header class="page-header page-header--nojs">
       <div class="page-header__wrap">
         <a href="#" class="page-header__logo">
-          <xml version="1.0" encoding="utf-8">
-          <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-          	 viewBox="0 0 74.43 22.86" style="enable-background:new 0 0 74.43 22.86;" xml:space="preserve" width="75" height="22">
-          <style type="text/css">
-          	.st0{fill:#FFFFFF;}
-          </style>
-          <g>
-          	<path class="st0" d="M0,1.45c0-0.71,0.58-1.29,1.26-1.29h7.18c5.09,0,8.44,2.7,8.44,7.15v0.06c0,4.86-4.06,7.37-8.85,7.37H2.54
-          		v6.83c0,0.71-0.58,1.29-1.29,1.29C0.58,22.86,0,22.28,0,21.57V1.45z M8.11,12.43c3.73,0,6.18-2,6.18-4.96V7.41
-          		c0-3.22-2.41-4.89-6.05-4.89h-5.7v9.92H8.11z"/>
-          	<path class="st0" d="M21.73,1.29c0-0.71,0.58-1.29,1.25-1.29c0.71,0,1.29,0.58,1.29,1.29v20.28c0,0.71-0.58,1.29-1.29,1.29
-          		c-0.68,0-1.25-0.58-1.25-1.29L21.73,1.29L21.73,1.29z"/>
-          	<path class="st0" d="M30.87,1.32c0-0.68,0.58-1.26,1.26-1.26h0.35c0.58,0,0.93,0.29,1.29,0.74l13.68,17.45v-17
-          		C47.45,0.58,48,0,48.71,0c0.68,0,1.22,0.58,1.22,1.26V21.6c0,0.68-0.48,1.19-1.16,1.19h-0.13c-0.55,0-0.93-0.32-1.32-0.77
-          		L33.35,4.15V21.6c0,0.68-0.55,1.26-1.26,1.26c-0.68,0-1.22-0.58-1.22-1.26V1.32z"/>
-          	<path class="st0" d="M56.3,1.29C56.3,0.58,56.88,0,57.56,0c0.71,0,1.29,0.58,1.29,1.29v12.33L71.69,0.45
-          		c0.29-0.26,0.58-0.45,1-0.45c0.68,0,1.22,0.61,1.22,1.26c0,0.35-0.16,0.64-0.42,0.9l-7.98,7.92l8.56,10.56
-          		c0.22,0.29,0.35,0.55,0.35,0.93c0,0.68-0.58,1.29-1.29,1.29c-0.48,0-0.81-0.26-1.03-0.58l-8.4-10.46l-4.86,4.86v4.89
-          		c0,0.71-0.58,1.29-1.29,1.29c-0.68,0-1.26-0.58-1.26-1.29L56.3,1.29L56.3,1.29z"/>
-          </g>
+          <svg class="logo-mobile" viewBox="0 0 74.43 22.86" width="75" height="22"><g class="logo-name" fill="#FFF"><path d="M0 1.45C0 .74.58.16 1.26.16h7.18c5.09 0 8.44 2.7 8.44 7.15v.06c0 4.86-4.06 7.37-8.85 7.37H2.54v6.83c0 .71-.58 1.29-1.29 1.29-.67 0-1.25-.58-1.25-1.29V1.45zm8.11 10.98c3.73 0 6.18-2 6.18-4.96v-.06c0-3.22-2.41-4.89-6.05-4.89h-5.7v9.92h5.57zM21.73 1.29c0-.71.58-1.29 1.25-1.29.71 0 1.29.58 1.29 1.29v20.28c0 .71-.58 1.29-1.29 1.29-.68 0-1.25-.58-1.25-1.29V1.29zM30.87 1.32c0-.68.58-1.26 1.26-1.26h.35c.58 0 .93.29 1.29.74l13.68 17.45v-17C47.45.58 48 0 48.71 0c.68 0 1.22.58 1.22 1.26V21.6c0 .68-.48 1.19-1.16 1.19h-.13c-.55 0-.93-.32-1.32-.77L33.35 4.15V21.6c0 .68-.55 1.26-1.26 1.26-.68 0-1.22-.58-1.22-1.26V1.32zM56.3 1.29c0-.71.58-1.29 1.26-1.29.71 0 1.29.58 1.29 1.29v12.33L71.69.45c.29-.26.58-.45 1-.45.68 0 1.22.61 1.22 1.26 0 .35-.16.64-.42.9l-7.98 7.92 8.56 10.56c.22.29.35.55.35.93 0 .68-.58 1.29-1.29 1.29-.48 0-.81-.26-1.03-.58l-8.4-10.46-4.86 4.86v4.89c0 .71-.58 1.29-1.29 1.29-.68 0-1.26-.58-1.26-1.29l.01-20.28z"/></g></svg>
+          <svg class="logo-tablet" viewBox="0 0 146.3 40.37" width="147" height="40"><g class="logo-name" fill="#FFF"><path d="M71.87 18.66c0-.71.58-1.29 1.26-1.29h7.18c5.09 0 8.44 2.7 8.44 7.15v.06c0 4.86-4.06 7.37-8.85 7.37h-5.47v6.83c0 .71-.58 1.29-1.29 1.29-.68 0-1.26-.58-1.26-1.29l-.01-20.12zm8.12 10.98c3.73 0 6.18-2 6.18-4.96v-.06c0-3.22-2.41-4.89-6.05-4.89h-5.7v9.92l5.57-.01zM93.6 18.5c0-.71.58-1.29 1.25-1.29.71 0 1.29.58 1.29 1.29v20.28c0 .71-.58 1.29-1.29 1.29-.68 0-1.25-.58-1.25-1.29V18.5zM102.74 18.53c0-.68.58-1.26 1.26-1.26h.35c.58 0 .93.29 1.29.74l13.68 17.45v-17c0-.68.55-1.26 1.26-1.26.68 0 1.22.58 1.22 1.26v20.35c0 .68-.48 1.19-1.16 1.19h-.13c-.55 0-.94-.32-1.32-.77l-13.98-17.87v17.45c0 .68-.55 1.26-1.26 1.26-.68 0-1.22-.58-1.22-1.26l.01-20.28zM128.17 18.5c0-.71.58-1.29 1.26-1.29.71 0 1.29.58 1.29 1.29v12.33l12.85-13.17c.29-.26.58-.45 1-.45.68 0 1.22.61 1.22 1.26 0 .35-.16.64-.42.9l-7.98 7.92 8.56 10.56c.22.29.35.55.35.94 0 .68-.58 1.29-1.29 1.29-.48 0-.81-.26-1.03-.58l-8.4-10.46-4.86 4.86v4.89c0 .71-.58 1.29-1.29 1.29-.68 0-1.26-.58-1.26-1.29V18.5z"/></g><path class="logo-glasses" fill="#FFF" d="M60.46 28.02c0-.01-5.17-21.36-5.17-21.36C54.93 4.3 52.69 0 46.69 0c-.83 0-1.5.67-1.5 1.5s.67 1.5 1.5 1.5c4.86 0 5.58 3.73 5.64 4.14l4.77 19.7h-2.07c-.74-5.93-5.8-10.53-11.93-10.53s-11.19 4.6-11.93 10.53h-1.82c-.74-5.93-5.8-10.53-11.93-10.53S6.23 20.92 5.49 26.84H3.42l4.77-19.7C8.25 6.73 8.97 3 13.83 3c.83 0 1.5-.67 1.5-1.5S14.65 0 13.83 0c-6.01 0-8.24 4.3-8.6 6.65 0 0-5.17 21.36-5.18 21.36-.27 1.11.53 1.83 1.43 1.83H5.5c.74 5.93 5.8 10.53 11.93 10.53s11.19-4.6 11.93-10.53h1.81c.74 5.93 5.8 10.53 11.93 10.53s11.19-4.6 11.93-10.53h4.01c.89 0 1.69-.71 1.42-1.82zm-34.15 1.82c-.71 4.27-4.42 7.53-8.9 7.53s-8.18-3.26-8.9-7.53c-.08-.49-.13-.99-.13-1.5s.05-1.01.13-1.5c.71-4.27 4.42-7.53 8.9-7.53s8.18 3.26 8.9 7.53c.08.49.14.99.14 1.5 0 .52-.05 1.02-.14 1.5zm25.68 0c-.72 4.27-4.42 7.53-8.9 7.53-4.47 0-8.18-3.26-8.9-7.53-.08-.49-.14-.99-.14-1.5s.05-1.01.14-1.5c.72-4.27 4.42-7.53 8.9-7.53s8.18 3.26 8.9 7.53c.08.49.13.99.13 1.5.01.52-.05 1.02-.13 1.5z"/></svg>
+          <svg class="logo-desktop" viewBox="0 0 146.3 40.37" width="147" height="40"><g class="logo-name" fill="#FFF"><path d="M71.87 18.66c0-.71.58-1.29 1.26-1.29h7.18c5.09 0 8.44 2.7 8.44 7.15v.06c0 4.86-4.06 7.37-8.85 7.37h-5.47v6.83c0 .71-.58 1.29-1.29 1.29-.68 0-1.26-.58-1.26-1.29l-.01-20.12zm8.12 10.98c3.73 0 6.18-2 6.18-4.96v-.06c0-3.22-2.41-4.89-6.05-4.89h-5.7v9.92l5.57-.01zM93.6 18.5c0-.71.58-1.29 1.25-1.29.71 0 1.29.58 1.29 1.29v20.28c0 .71-.58 1.29-1.29 1.29-.68 0-1.25-.58-1.25-1.29V18.5zM102.74 18.53c0-.68.58-1.26 1.26-1.26h.35c.58 0 .93.29 1.29.74l13.68 17.45v-17c0-.68.55-1.26 1.26-1.26.68 0 1.22.58 1.22 1.26v20.35c0 .68-.48 1.19-1.16 1.19h-.13c-.55 0-.94-.32-1.32-.77l-13.98-17.87v17.45c0 .68-.55 1.26-1.26 1.26-.68 0-1.22-.58-1.22-1.26l.01-20.28zM128.17 18.5c0-.71.58-1.29 1.26-1.29.71 0 1.29.58 1.29 1.29v12.33l12.85-13.17c.29-.26.58-.45 1-.45.68 0 1.22.61 1.22 1.26 0 .35-.16.64-.42.9l-7.98 7.92 8.56 10.56c.22.29.35.55.35.94 0 .68-.58 1.29-1.29 1.29-.48 0-.81-.26-1.03-.58l-8.4-10.46-4.86 4.86v4.89c0 .71-.58 1.29-1.29 1.29-.68 0-1.26-.58-1.26-1.29V18.5z"/></g><g class="logo-glasses--desktop" fill="#FFF"><path d="M43.09 19.31c.25 0 .49.01.73.03a2.495 2.495 0 00-2.14-1.22c-.88 0-1.61-.57-1.88-1.35-.73.21-1.43.48-2.09.82.06.02.12.04.19.04 1.1 0 2 .9 2 2 0 .1-.01.19-.03.28 1.01-.39 2.09-.6 3.22-.6z"/><path d="M60.46 28.02c0-.01-5.17-21.36-5.17-21.36C54.93 4.3 52.69 0 46.69 0c-.83 0-1.5.67-1.5 1.5s.67 1.5 1.5 1.5c4.86 0 5.58 3.73 5.64 4.14l4.77 19.7h-2.07c-.44-3.56-2.45-6.63-5.31-8.52a2.5 2.5 0 00-1.53 2.3c0 .09-.02.17-.03.26 1.99 1.36 3.42 3.49 3.83 5.96.08.49.13.99.13 1.5s-.05 1.01-.13 1.5c-.72 4.27-4.42 7.53-8.9 7.53-4.47 0-8.18-3.26-8.9-7.53-.08-.49-.14-.99-.14-1.5s.05-1.01.14-1.5c.15-.88.43-1.71.81-2.48a1.995 1.995 0 01-1.85-1.98c0-.19-.08-.36-.19-.49a11.84 11.84 0 00-1.79 4.96h-1.82c-.74-5.93-5.8-10.53-11.93-10.53S6.23 20.92 5.49 26.84H3.42l4.77-19.7C8.25 6.73 8.97 3 13.83 3c.83 0 1.5-.67 1.5-1.5S14.65 0 13.83 0c-6.01 0-8.24 4.3-8.6 6.65 0 0-5.17 21.36-5.18 21.36-.27 1.11.53 1.83 1.43 1.83H5.5c.08.63.21 1.24.39 1.83.06-.11.1-.22.1-.35 0-1.1.9-2 2-2 .17 0 .32.02.48.06-.04-.34-.07-.69-.07-1.04 0-.51.05-1.01.13-1.5.72-4.27 4.42-7.53 8.9-7.53s8.18 3.26 8.9 7.53c.08.49.14.99.14 1.5s-.05 1.01-.14 1.5a9.023 9.023 0 01-14.29 5.74c-.35.3-.8.49-1.3.49-.41 0-.75.34-.75.75 0 .29-.06.56-.18.81 2.07 1.71 4.72 2.74 7.61 2.74 6.13 0 11.19-4.6 11.93-10.53h1.81c.74 5.93 5.8 10.53 11.93 10.53s11.19-4.6 11.93-10.53h4.02c.89 0 1.69-.71 1.42-1.82z"/></g><g class="logo-stars"><path fill="#D22856" d="M50.69 16.13a4.5 4.5 0 01-4.5-4.5 4.5 4.5 0 01-4.5 4.5 4.5 4.5 0 014.5 4.5c0-2.49 2.01-4.5 4.5-4.5zM98.5 9.88c-2 0-3.62-1.62-3.62-3.62 0 2-1.62 3.62-3.63 3.62 2 0 3.63 1.62 3.63 3.62-.01-2 1.62-3.62 3.62-3.62zM37.9 19.63c-1.52 0-2.75-1.23-2.75-2.75 0 1.52-1.23 2.75-2.75 2.75 1.52 0 2.75 1.23 2.75 2.75 0-1.52 1.24-2.75 2.75-2.75zM10.73 34.07c-1.52 0-2.75-1.23-2.75-2.75 0 1.52-1.23 2.75-2.75 2.75 1.52 0 2.75 1.23 2.75 2.75 0-1.52 1.23-2.75 2.75-2.75z"/></g></svg>
         </a>
       </div>
       <nav class="main-nav main-nav--closed">
@@ -52,6 +35,9 @@
         <h2 class="visually-hidden">Скачать приложение</h2>
         <div class="download-attachment__wrap__img">
           <picture>
+            <source type="image/webp" media="(min-width: 1100px)" srcset="img/phone-desktop.webp, img/phone-desktopx2.webp 2x">              <source type="image/webp" media="(min-width: 660px)" srcset="img/phone-tablet.webp, img/phone-tabletx2.webp 2x">
+            <source type="image/webp" srcset="img/phone-mobile.webp, img/phone-mobilex2.webp 2x">
+
             <source media="(min-width: 1100px)" srcset="img/phone-desktop.jpg, img/phone-desktopx2.jpg 2x">
             <source media="(min-width: 660px)" srcset="img/phone-tablet.jpg, img/phone-tabletx2.jpg 2x">
             <img class="download-attachment__img" src="img/phone-mobile.jpg" srcset="img/phone-mobilex2.jpg 2x" alt="Фон">
@@ -95,7 +81,7 @@
         <div class="effect__wrap">
           <h2 class="visually-hidden">Эффект от приложения</h2>
           <p class="effect__text">
-          <b>Эффект на 24 часа!</b>
+          <b>Эффект <br> на 24 часа!</b>
           Британские ученые провели исследования и доказали, что положительный эффект от использования приложения длится целые сутки!
           <a class="effect__link" href="#">Узнать больше об исследовании</a>
           </p>
